@@ -8,7 +8,7 @@ function GM:PlayerSay(ply, text)
 	self.BaseClass:PlayerSay(ply, text)
 
 	for k, v in pairs(ChatCommands) do
-		if v.cmd == string.Explode(" ", string.lower(text))[1] then
+		if string.lower(v.cmd) == string.Explode(" ", string.lower(text))[1] then
 			return v.callback(ply, "" .. string.sub(text, string.len(v.cmd) + 2, string.len(text)))
 		end
 	end
